# polkadot-kisumu-workshop

./: .gitignore  LICENSE  README.md
Calculator/: Readme.md
Calculator/src/: main.rs
GuestTracker/: Cargo.toml  README.md
Guesttracker/: Cargo.toml  README.md
HelloWorld/: .gitignore
Session3-Week2-Assignment-Quiz/: README.md
Session4-Week2-Assignment-Quiz/: README.md
Session5-Assignment/: README.md
Session7-Week4-Assignment-Quiz/: README.md
Web3Profile/: Cargo.toml  README.md
calculator/: Cargo.toml
code_controls/: Cargo.toml
guest_tracker_app/: Cargo.toml
hello_kisumu/: Cargo.toml
kherld/: Cargo.toml
oumaoumag/: .gitignore
quinter/: .gitignore
rust_calculator/: README.md
rusty_cli_calculator/: Cargo.toml
session2-Week1-Assignment-Quiz/: README.md
task2_week1/: Cargo.toml
vincent_calculator/: Cargo.toml
vincent_week2/: Cargo.toml
vincent_week3/: Cargo.toml
vincent_week4/: .gitignore  Cargo.toml  README.md
vinolia_hello/: Cargo.toml
vinolia_mutable/: Cargo.toml
weather-app/: Cargo.toml  README.md
weather_suggestion/: Cargo.toml
weather_suggestion_assistant/: Cargo.toml
web3-profile-system/: Cargo.toml  Readme.md
week2_assignment1/: Cargo.toml
week2_assignment2/: Cargo.toml
week2_session3/: Cargo.toml
week2_session4/: Cargo.toml  README.md
week3_session6/: Cargo.toml  README.md
week4_session7/: Cargo.toml  README.md
week4_session8/: Cargo.toml  README.md
week_1/: Cargo.toml
week_2/: Cargo.toml
week_3/: README.md
week_one_assignment/: Cargo.toml
wishlist/: Cargo.toml  lib.rs
(+159 files in other folders)
